# Real-time-stock-prediction-using-c-and-Linux

./: CMakeCache.txt  CMakeLists.txt  Makefile  README.md  TargetDirectories.txt  alert_manager.cpp  alert_manager.hpp  alerts_dep.json  alerts_vada .json  alerts_vada.json  api.cpp  api.hpp  build.make  compiler_depend.make  depend.make  display.cpp  display.hpp  flags.make  link.txt  logger.cpp  logger.hpp  main.cpp  nasdaq_symbols.txt  stock-tracker  stock.hpp  watchlist_dep.json  watchlist_manager.cpp  watchlist_manager.hpp  watchlist_op.json
